# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.817 2010/05/14 14:42:08 mpagano Exp $

*git-sources-2.6.34_rc7-r6 (14 May 2010)

  14 May 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc7-r6.ebuild:
  Version bump

*git-sources-2.6.34_rc7-r5 (14 May 2010)

  14 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc7-r5.ebuild:
  Version bump

*git-sources-2.6.34_rc7-r4 (13 May 2010)

  13 May 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc7-r4.ebuild:
  Version bump

  12 May 2010; Michael Pagano <mpagano@gentoo.org> ChangeLog:
  Fix broken manifest

*git-sources-2.6.34_rc7-r3 (12 May 2010)

  12 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc7-r3.ebuild:
  Version bump

*git-sources-2.6.34_rc7-r2 (11 May 2010)
*git-sources-2.6.34_rc7-r1 (11 May 2010)

  11 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc7-r1.ebuild, +git-sources-2.6.34_rc7-r2.ebuild:
  Version bumps

*git-sources-2.6.34_rc7 (10 May 2010)

  10 May 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.34_rc5.ebuild, -git-sources-2.6.34_rc5-r1.ebuild,
  -git-sources-2.6.34_rc5-r2.ebuild, -git-sources-2.6.34_rc5-r3.ebuild,
  -git-sources-2.6.34_rc5-r4.ebuild, -git-sources-2.6.34_rc5-r5.ebuild,
  -git-sources-2.6.34_rc5-r6.ebuild, -git-sources-2.6.34_rc5-r7.ebuild,
  -git-sources-2.6.34_rc5-r8.ebuild, -git-sources-2.6.34_rc5-r9.ebuild,
  -git-sources-2.6.34_rc5-r10.ebuild, +git-sources-2.6.34_rc7.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.34_rc6-r6 (08 May 2010)

  08 May 2010; <mike@gentoo.org> +git-sources-2.6.34_rc6-r6.ebuild:
  Version bump

*git-sources-2.6.34_rc6-r5 (06 May 2010)

  06 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc6-r5.ebuild:
  Version bump

*git-sources-2.6.34_rc6-r4 (05 May 2010)
