@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.817 2010/05/14 14:42:08 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.818 2010/05/15 15:43:25 mpagano Exp $
+
+*git-sources-2.6.34_rc7-r8 (15 May 2010)
+*git-sources-2.6.34_rc7-r7 (15 May 2010)
+
+  15 May 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.34_rc7-r7.ebuild, +git-sources-2.6.34_rc7-r8.ebuild:
+  Version bumps
 
 *git-sources-2.6.34_rc7-r6 (14 May 2010)
 
